--- a/templates/result.html
+++ b/templates/result.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="/static/style.css">
-    <title>Risultati Ricerca</title>
+    <title>Risultati Ricerc</title>
     <style>
         /* Stili personalizzati */
         /* Aggiungi stili personalizzati qui */
