sistemato style.css e result.html

--- a/static/style.css
+++ b/static/style.css
@@ -171,7 +171,7 @@ li {
 .relic-container h5 {
     font-size: 1.8rem;
     margin-bottom: 1rem;
-    color: #fff; /* Testo bianco */
+    color: black; /* Testo bianco */
 }
 
 /* Stile per la cornice delle immagini */
@@ -201,4 +201,16 @@ li {
 #viewDiv{
     height: 700px;
     width: 100%;
+}
+
+/* Stile per il modale con effetto fade */
+.modal.fade .modal-dialog {
+    transition: transform 0.3s ease, opacity 0.3s ease;
+    transform: translate(0, -50px); /* Posizione di partenza leggermente sopra il centro */
+    opacity: 0;
+}
+
+.modal.fade.show .modal-dialog {
+    transform: translate(0, 0); /* Posizione finale al centro */
+    opacity: 1;
 }
