--- a/templates/result.html
+++ b/templates/result.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="/static/style.css">
-    <title>Risultati Ricerc</title>
+    <title>Risultati Ricerca</title>
     <style>
         /* Stili personalizzati */
         /* Aggiungi stili personalizzati qui */
@@ -40,7 +40,7 @@
                                                 {% for url in reperto.image_urls %}
                                                     <div class="relic-container">
                                                         <div class="image-container">
-                                                            <img src="{{ url }}" alt="Immagine di {{ reperto['Codice Reperto'] }}" class="img-fluid">
+                                                            <img src="{{ url }}" alt="Immagine di {{ reperto['Codice Reperto'] }}" class="img-fluid" data-image-url="{{ url }}">
                                                         </div>
                                                         <div class="inscription-container">
                                                             <p class="latin-inscription">Inscrizione Latina: <br>{{ reperto["Latino"] }}</p>
@@ -70,5 +70,6 @@
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
 </body>
 </html>
