Si vedono di nuovo i reperti

--- a/templates/result.html
+++ b/templates/result.html
@@ -2,126 +2,34 @@
 <html lang="it">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Risultati della Ricerca per "{{ query }}"</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/static/style.css">
-    <title>Risultati Ricerca</title>
     <style>
-        /* Stili personalizzati */
-        /* Aggiungi stili personalizzati qui */
+        .container { margin-top: 20px; }
+        .image-container img { width: 100%; height: auto; }
     </style>
 </head>
 <body>
-<div class="container mt-5">
-    {% if chiese %}
-    <h2 class="mb-4">Risultati della ricerca per "{{ query }}"</h2>
-    <div class="accordion" id="chieseAccordion">
-        {% for chiesa in chiese %}
-        <div class="card">
-            <div class="card-header" id="chiesa{{ chiesa['Codice Chiesa'] }}">
-                <h3 class="mb-0">
-                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse1{{ chiesa['Codice Chiesa'] }}" aria-expanded="true" aria-controls="collapse{{ chiesa['Codice Chiesa'] }}">
-                        Reperts
-                    </button>
-                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse2{{ chiesa['Codice Chiesa'] }}" aria-expanded="true" aria-controls="collapse{{ chiesa['Codice Chiesa'] }}">
-                        Floor
-                    </button>
-                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse3{{ chiesa['Codice Chiesa'] }}" aria-expanded="true" aria-controls="collapse{{ chiesa['Codice Chiesa'] }}">
-                        Church floor Plan
-                    </button>
-                </h3>
-            </div>
-            <div id="collapse1{{ chiesa['Codice Chiesa'] }}" class="collapse" aria-labelledby="chiesa{{ chiesa['Codice Chiesa'] }}" data-parent="#chieseAccordion">
-                <div class="card-body">
-                    <p>Indirizzo: {{ chiesa['Indirizzo'] }}</p>
-                    <h4>Reperti:</h4>
-                    <ul class="list-group">
-                        {% for reperto in reperti %}
-                        {% if reperto['Codice Chiesa'] == chiesa['Codice Chiesa'] %}
-                        <li class="list-group-item">
-                            <h5>Nome Reperto: {{ reperto['Nome Reperto'] }}</h5>
-                            <!-- Aggiunta delle immagini del reperto -->
-                            {% if reperto.image_urls %}
-                            {% for url in reperto.image_urls %}
-                            <div class="relic-container">
-                                <div class="image-container">
-                                    <img src="{{ url }}" alt="Immagine di {{ reperto['Codice Reperto'] }}" class="img-fluid" data-image-url="{{ url }}">
-                                </div>
-                                <div class="inscription-container">
-                                    <p class="latin-inscription">Inscrizione Latina: <br>{{ reperto['Latino'] }}</p>
-                                </div>
-                            </div>
-                            {% endfor %}
-                            {% else %}
-                            <p>Nessuna immagine disponibile.</p>
-                            {% endif %}
-                            <p>Altro Materiale: {{ reperto['Altro Materiale'] }}</p>
-                        </li>
-                        {% endif %}
-                        {% endfor %}
-                    </ul>
-                </div>
-            </div>
-            <div id="collapse2{{ chiesa['Codice Chiesa'] }}" class="collapse" aria-labelledby="chiesa{{ chiesa['Codice Chiesa'] }}" data-parent="#chieseAccordion">
-                <div class="card-body">
-                    {% if floor_images %}
-                    <h4>Foto dei Pavimenti:</h4>
-                    {% for url in floor_images %}
-                    <div class="floor-image-container">
-                        <img src="{{ url }}" alt="Immagine del pavimento della chiesa {{ chiesa['Codice Chiesa'] }}" class="img-fluid">
-                    </div>
-                    {% endfor %}
-                    {% else %}
-                    <p>Nessuna foto dei pavimenti disponibile.</p>
+<div class="container">
+    <h2>Risultati della ricerca per "{{ chiesa }}"</h2>
+    <div class="row">
+        {% for i in range(reperti|length) %}
+            <div class="col-md-4 mb-4">
+                <div class="card">
+                    {% if immagini[i] %}
+                        <img src="{{ immagini[i] }}" class="card-img-top" alt="Immagine del reperto">
                     {% endif %}
-                </div>
-            </div>
-            <div id="collapse3{{ chiesa['Codice Chiesa'] }}" class="collapse" aria-labelledby="chiesa{{ chiesa['Codice Chiesa'] }}" data-parent="#chieseAccordion">
-                <div>
-                    {% if general_images %}
-                    <h4>Foto Generali:</h4>
-                    {% for url in general_images %}
-                    <div class="general-image-container">
-                        <img src="{{ url }}" alt="Immagini generali della chiesa {{ chiesa['Codice Chiesa'] }}" class="img-fluid">
+                    <div class="card-body">
+                        <h5 class="card-title">{{ reperti[i] }}</h5>
+                        <p class="card-text">{{ scritte[i] }}</p>
                     </div>
-                    {% endfor %}
-                    {% else %}
-                    <p>Nessuna foto disponibile.</p>
-                    {% endif %}
                 </div>
             </div>
-        </div>
         {% endfor %}
     </div>
-    {% else %}
-    {% if query %}
-    <p>Nessun risultato trovato per "{{ query }}".</p>
-    {% endif %}
-    {% endif %}
-    <div class="modal fade" id="imageModal" tabindex="-1" aria-labelledby="imageModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-lg">
-            <div class="modal-content">
-                <div class="modal-body">
-                    <img src="" class="img-fluid" id="modalImage" alt="Immagine ingrandita">
-                </div>
-            </div>
-        </div>
-    </div>
 </div>
-<script>
-    // Seleziona tutti gli elementi con classe 'image-container'
-    var images = document.querySelectorAll('.image-container');
 
-    // Aggiungi un listener di evento 'click' a ciascun elemento
-    images.forEach(function(image) {
-        image.addEventListener('click', function() {
-            var modalImage = document.getElementById('modalImage');
-            var imageURL = this.querySelector('img').getAttribute('src');
-            modalImage.src = imageURL;
-            $('#imageModal').modal('show');
-        });
-    });
-</script>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
